[metadata]
name = cron_parser
version = 0.0.1
author = Amin Kamal
author_email = abmak93@gmail.com
description = cron_parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aminkamal/cron_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = cron_parser
python_requires = >=3.6
